Some more changes, but nasty bugs in the command interface. argh!